# celestia-core-rpc-rs

./: .gitignore  Cargo.toml  README.md  RELEASING.md
.github/workflows/: release.yml
proto/: CHANGELOG.md  Cargo.toml
proto/src/: lib.rs  prelude.rs  protobuf.rs  serializers.rs  tendermint.rs
proto/src/prost/v0_34/: tendermint.abci.rs  tendermint.crypto.rs  tendermint.mempool.rs  tendermint.p2p.rs  tendermint.rpc.grpc.rs  tendermint.types.rs  tendermint.version.rs
proto/src/serializers/: bytes.rs  cow_str.rs  evidence.rs  from_str.rs  optional_from_str.rs  public_key.rs  timestamp.rs
proto/src/tendermint/: v0_34.rs
proto/tests/: unit.rs
scripts/: install.sh
src/: client.rs  dialect.rs  endpoint.rs  error.rs  event.rs  method.rs  query.rs  serializers.rs  utils.rs
src/client/: compat.rs  subscription.rs  transport.rs
src/client/transport/: auth.rs  http.rs  mock.rs  router.rs  websocket.rs
src/dialect/: begin_block.rs  check_tx.rs  deliver_tx.rs  end_block.rs  v0_34.rs  v0_37.rs
src/endpoint/: abci_info.rs  abci_query.rs  block.rs  block_by_hash.rs  block_results.rs  blockchain.rs  check_tx.rs  commit.rs  consensus_params.rs  consensus_state.rs  data_commitment.rs  data_root_inclusion_proof.rs  dial_peers.rs  dial_seeds.rs  dump_consensus_state.rs  evidence.rs  genesis.rs  genesis_chunked.rs  header.rs  header_by_hash.rs  net_info.rs  num_unconfirmed_txs.rs  prove_shares.rs  prove_shares_v2.rs  signed_block.rs  status.rs  tx.rs  tx_search.rs  tx_status.rs  tx_status_batch.rs  unconfirmed_txs.rs  unsafe_flush_mempool.rs  unsubscribe_all.rs  validators.rs
src/endpoint/broadcast/: tx_async.rs  tx_commit.rs  tx_sync.rs
src/serializers/: celestia_block.rs  celestia_block_data.rs  opt_tm_hash_base64.rs  tm_hash_base64.rs  tx_hash_base64.rs
tendermint/: CHANGELOG.md  Cargo.toml  README.md
tendermint/src/: abci.rs  account.rs  block.rs  error.rs  evidence.rs  hash.rs  lib.rs  private_key.rs  proposal.rs  proto_macros.rs  public_key.rs  serializers.rs  signature.rs  time.rs  timeout.rs  validator.rs  vote.rs
tendermint/src/abci/: event.rs  types.rs
tendermint/src/abci/request/: info.rs  prepare_proposal.rs  process_proposal.rs  set_option.rs
tendermint/src/abci/response/: info.rs  prepare_proposal.rs  process_proposal.rs  set_option.rs
tendermint/src/block/: commit.rs  data.rs  header.rs  height.rs  id.rs  meta.rs  parts.rs  round.rs  signed_header.rs  size.rs
tendermint/src/chain/: id.rs
tendermint/src/consensus/: params.rs  state.rs
tendermint/src/merkle/: proof.rs
tendermint/src/node/: id.rs
tendermint/src/proposal/: msg_type.rs  sign_proposal.rs
tendermint/src/serializers/: apphash.rs  hash.rs  time.rs
tendermint/src/tx/: proof.rs
tendermint/src/v0_34/abci/: request.rs  response.rs
tendermint/src/vote/: canonical_vote.rs  power.rs  sign_vote.rs
test/: Cargo.toml
test/src/: main.rs
tests/: remote.rs
