[package]
name       = "celestia-core-rpc"
version    = "0.39.25"
edition    = "2021"
license    = "Apache-2.0"
homepage   = "https://celestia.org/"
repository = "https://github.com/celestiaorg/celestia-core-rpc-rs"
readme     = "README.md"
keywords   = ["blockchain", "cosmos", "celestia"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
authors    = [
  "Informal Systems <hello@informal.systems>",
  "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
  "Alexander Simmerl <a.simmerl@gmail.com>",
  "Diego Ferrer <diego@celestia.org>",
]

description = """
    celestia-core-rpc contains the core types returned by a Celestia Core node's RPC endpoint.
    All networking related features are feature guarded to keep the dependencies small in
    cases where only the core types are needed.
    """

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "celestiacore"
path = "src/bin/celestiacore.rs"
required-features = [ "cli" ]

[features]
default = ["flex-error/std", "flex-error/eyre_tracer"]
cli = [
  "http-client",
  "structopt",
  "tracing-subscriber",
  "websocket-client"
]
http-client = [
  "futures",
  "http",
  "http-body-util",
  "hyper",
  "hyper-util",
  "hyper-rustls",
  "tokio/fs",
  "tokio/macros",
  "tracing"
]
secp256k1 = [ "tendermint/secp256k1" ]
websocket-client = [
  "async-tungstenite",
  "futures",
  "http",
  "tokio/rt-multi-thread",
  "tokio/fs",
  "tokio/macros",
  "tokio/sync",
  "tokio/time",
  "tracing"
]

[dependencies]
tendermint = { version = "0.40.3", default-features = false }
tendermint-config = { version = "0.40.3", default-features = false }
tendermint-proto = { version = "0.40.3", default-features = false }
tendermint-rpc = { version = "0.40.3", default-features = false }
celestia-types = { version = "0.20.0", default-features = false }
celestia-proto = { version = "0.12.1", default-features = false }

async-trait = { version = "0.1", default-features = false }
bytes = { version = "1.0", default-features = false }
getrandom = { version = "0.4.2", default-features = false, features = ["wasm_js"] }
peg = { version = "0.8.5", default-features = false }
pin-project = { version = "1.0.1", default-features = false }
serde = { version = "1", default-features = false, features = [ "derive" ] }
serde_bytes = { version = "0.11", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "2.0.18", default-features = false }
time = { version = "0.3", default-features = false, features = ["macros", "parsing"] }
uuid = { version = "1.21.0", default-features = false, features = ["std"] }
subtle-encoding = { version = "0.5", default-features = false, features = ["bech32-preview"] }
url = { version = "2.2", default-features = false }
walkdir = { version = "2.3", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
subtle = { version = "2", default-features = false }
semver = { version = "1.0", default-features = false }

# Optional dependencies
async-tungstenite = { version = "0.33.0", default-features = false, features = ["tokio-runtime", "tokio-rustls-native-certs"], optional = true }
futures = { version = "0.3", optional = true, default-features = false }
http = { version = "1.4.0", optional = true, default-features = false }
http-body-util = { version = "0.1", optional = true, default-features = false }
hyper = { version = "1.8.1", optional = true, default-features = false, features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.20", optional = true, default-features = false, features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27.7", optional = true, default-features = false, features = ["http1", "ring", "rustls-native-certs"] }
structopt = { version = "0.3", optional = true, default-features = false }
tokio = { version = "1.0", optional = true, default-features = false, features = ["rt-multi-thread"] }
tracing = { version = "0.1", optional = true, default-features = false }
tracing-subscriber = { version = "0.3.22", optional = true, default-features = false, features = ["fmt"] }

[dev-dependencies]
lazy_static = { version = "1.4.0", default-features = false }
tokio-test = { version = "0.4", default-features = false }
