[package]
name       = "celestia-tendermint-proto"
version    = "0.34.0"
edition    = "2021"
license    = "Apache-2.0"
homepage   = "https://celestia.org/"
repository = "https://github.com/celestiaorg/celestia-core-rpc-rs"
readme     = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "tendermint", "proto"]

description = """
    This is a hard fork of tendermint to make it compatible with the Celestia network.
    celestia-tendermint-proto is the Rust implementation of the Celestia Core proto structs.
    """

authors    = [
    "Informal Systems <hello@informal.systems>",
    "Eiger <hello@eiger.co>",
    "Diego Ferrer <diego@celestia.org>"
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost = { version = "0.12", default-features = false }
prost-types = { version = "0.12", default-features = false }
bytes = { version = "1.0", default-features = false, features = ["serde"]}
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
subtle-encoding = { version = "0.5", default-features = false, features = ["hex", "base64", "alloc"] }
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.3", default-features = false }
time = { version = "0.3", default-features = false, features = ["macros", "parsing"] }
flex-error = { version = "0.4.4", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
